# lab

./: .gitignore  README.MD  pyproject.toml
assets/: arvore.json
src/: abstract_factory.py  aleatorio.py  antropometria.py  arvore.py  async_req.py  busca.py  client_celery.py  contact.py  cores.py  dataklasses.py  ddd.pu  experimento_aranhacam.ipynb  experimento_aranhacam.py  factory.py  get.py  minimizator.py  monitorhw.py  ordena.py  perftemp.py  ph.py  pipilini.py  pok_coroutine.py  pok_coroutine2.py  pok_multi_process.py  popula_balipa.py  rani.py  script_websocket.py  script_websocket_server.py  tasks_celery.py  test_tmp.py  teste_poll.py  teste_poller_client.py  tmp.py  try_pdf.py
src/concorrencia/: pok.py  pok_coroutine.py  pok_coroutine2.py  pok_coroutine_semaphore.py  pok_multi_process.py  pok_thread.py
src/ledlogarithm/: ledlogarithm.py
src/loris/: loris.py
src/mocks/: factory.py  rand.py  test_factory.py
src/mocks_estudos/: test_randint.py
src/padroes/: Specification.puml  Specification.py  ddd.pu  factory.pu  factory.py  padroes.puml
src/plots/: experimento_aranhacam.py
src/project_euler/: ex10_summation_of_primes.py  ex12_highly_div_triangular_num.py  ex14_longest_collatz_sequence.py  ex16_power_digit_sum.py  ex17_number_letter_counts.py  ex18_maximum_path_sum.py
src/serialPython/: com_serial.py  mosta.py  valores.csv  valores_1.csv  valores_2.csv  valores_3.csv  visualiza.ipynb  visualiza.py
src/topografia/: PTS-0000.csv  varsao2.ipynb
tests/: test_arvore.py  test_busca.py  test_ex12.py  test_ordena.py
utils/: timer.py
(+8 files in other folders)
