[tool.poetry]
name = "lab"
version = "0.1.0"
description = ""
authors = ["ralphribeiro <ralph_ribeiro@msn.com>"]

[tool.poetry.dependencies]
python = "^3.10"
websockets = "^10.1"

[tool.poetry.dev-dependencies]
autopep8 = "^1.6.0"
pylama = "^8.3.3"
ipython = "^7.30.1"
ipdb = "^0.13.9"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
